tests/Semantic/test_2_r06.out
Error type 6 at Line 6: left side in assignment is rvalue
