tests/Semantic/test_2_r06.spl
int test_2_r06(int i, int n)
{
  int res = 0;
  if (i == 0)
  {
    1 = res;
  }
  else 
  {
    res = -n;
  }
  return res;
}
